--- a/Salud/ClientApp/src/styles.css
+++ b/Salud/ClientApp/src/styles.css
@@ -30,3 +30,5 @@ code {
 p{
   text-align: justify;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
