nuevo menu responsive con angular material

--- a/Salud/ClientApp/src/app/copago/copago-registro/copago-registro.component.html
+++ b/Salud/ClientApp/src/app/copago/copago-registro/copago-registro.component.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="text-center">
-                    <button class="btn btn-primary mr-1"(click)="add(formulario)">registrar Datos</button>
+                    <button class="btn btn-success "(click)="add(formulario)">registrar Datos</button>
                 </div>
             
             </form>
