--- a/Salud/ClientApp/src/app/copago/copago-consulta/copago-consulta.component.html
+++ b/Salud/ClientApp/src/app/copago/copago-consulta/copago-consulta.component.html
@@ -1,8 +1,10 @@
 <div class="row">
-    <div class="col-6">
+
+    <div class="col-6" style="margin-top: 20px;">
       <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Type to filter">
     </div>
   </div>
+  
   <hr>
   
   <table class="table table-striped" *ngIf='copagos && copagos.length'>
