--- a/Salud/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Salud/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,51 +1,31 @@
 <header>
-  <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
-  >
-    <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">Salud</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target=".navbar-collapse"
-        aria-label="Toggle navigation"
-        [attr.aria-expanded]="isExpanded"
-        (click)="toggle()"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div
-        class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
-        [ngClass]="{ show: isExpanded }"
-      >
+  
+  <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun" >
+    <mat-toolbar color="primary" class="example-toolbar" >
+      <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+      <h1 class="example-app-name">Menu Copago</h1>
+    </mat-toolbar>
+  
+    <mat-sidenav-container class="example-sidenav-container"
+                           [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+      <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+        <mat-nav-list>
+          <a mat-list-item [routerLink]="nav.route" *ngFor="let nav of fillerNav"> <mat-icon>{{nav.icon}}</mat-icon> {{nav.name}} </a>
+        </mat-nav-list>
+      </mat-sidenav>
+  
+      <mat-sidenav-content>
+            <div class="container">
+              
+                <router-outlet></router-outlet>
 
-        <ul class="navbar-nav flex-grow">
+            </div>
+      </mat-sidenav-content>
 
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-          </li>
-
-
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/copagoConsulta']"
-              >Consultar Copago</a
-            >
-          </li>
-          
-
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/copagoRegistro']"
-              >Registrar Copago</a
-            >
-          </li>
-
-        </ul>
-      </div>
-    </div>
-  </nav>
+    </mat-sidenav-container>
+  </div>
+  
+  <div *ngIf="!shouldRun">Error al Iniciar</div>
+  
 </header>
