--- a/Salud/ClientApp/src/styles.css
+++ b/Salud/ClientApp/src/styles.css
@@ -1,6 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
 
-/* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
 }
@@ -9,15 +7,16 @@ code {
   color: #e01a76;
 }
 
-.btn-primary {
+.btn-success {
   color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+  background-color: #339240;
+  border-color: rgb(3, 3, 3);
 }
 
 
 .h1{
-  background: chartreuse;
+  color: #fff;
+  background: #339240;
   margin: 50px 50px;
   text-align: center;
 }
