--- a/Salud/ClientApp/src/styles.css
+++ b/Salud/ClientApp/src/styles.css
@@ -13,6 +13,15 @@ code {
   border-color: rgb(3, 3, 3);
 }
 
+.btn-secondary{
+  
+  color: #fff;
+  background-color: #339240;
+  border-color: rgb(3, 3, 3);
+  margin-left: 10px;
+
+}
+
 
 .h1{
   color: #fff;
