--- a/Salud/ClientApp/src/app/copago/copago-registro/copago-registro.component.html
+++ b/Salud/ClientApp/src/app/copago/copago-registro/copago-registro.component.html
@@ -1,31 +1,66 @@
 <br>
 <div class="container">
+
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <h2>Registro de Copagos</h2>
-            <form #formulario="ngForm">
+
+            <form [formGroup]="formGroup">
                 <br>
-                                
-                <div class="form-group">
-                    <label>Identificacion</label>
-                    <input type="text" placeholder="Digite la identificacion paciente" name="identificacion"  [(ngModel)]="copago.identificacionPaciente" class="form-control" />
-                </div>
 
-                <div class="form-group">
-                    <label>Servicio hospitalizacion</label>
-                    <input type="number" placeholder="Digite el valor servicio"  name="servicio"  [(ngModel)]="copago.valorServicio" class="form-control" />
-                </div>
+                <div class="form-row">
 
-                <div class="form-group">
-                    <label>salario del paciente</label>
-                    <input type="number" placeholder="Digite el salario"  name="salario"  [(ngModel)]="copago.salarioTrabajador" class="form-control" />
+                    <div class="col-md-4 mb-3">
+
+                        <label for="identificacionPaciente">Identificacion</label>
+                        <input type="text" class="form-control is-valid" placeholder="Digite la identificacion paciente" name="identificacion" formControlName="identificacionPaciente" [ngClass]="{ 'is-invalid':  control.identificacionPaciente.errors}"/>
+                        
+                        <div *ngIf="control.identificacionPaciente.errors" class="invalid-feedback">
+
+                            <div *ngIf="control.identificacionPaciente.errors.required">Se require la identificacion</div>
+                            <div *ngIf="control.identificacionPaciente.errors.maxlength">no pueden ser mas de 10 caracteres</div>
+
+                        </div>
+                            
+                    </div>
+
+                    
+                    <div  class="col-md-4 mb-3">
+                        <label for="valorServicio">Servicio hospitalizacion</label>
+                        <input type="number" class="form-control is-valid" placeholder="Digite el valor servicio"  name="servicio" formControlName="valorServicio" [ngClass]="{ 'is-invalid':  control.valorServicio.errors}"/>
+                        <div *ngIf="control.valorServicio.errors" class="invalid-feedback">
+                            <div *ngIf="control.valorServicio.errors.required">Debe digitar el valor servicio</div>
+                            <div *ngIf="control.valorServicio.errors.min">Debe digitar un valor minimo </div>
+                        </div>
+                    </div>
+
+                    
+
+    
+                    <div  class="col-md-4 mb-3">
+                        <label for="salarioTrabajador">salario del paciente</label>
+                        <input type="number" class="form-control is-valid" placeholder="Digite el salario"  name="salario" formControlName="salarioTrabajador" [ngClass]="{ 'is-invalid':  control.salarioTrabajador.errors}" />
+                        <div *ngIf="control.salarioTrabajador.errors" class="invalid-feedback">
+                            <div *ngIf="control.salarioTrabajador.errors.required">Debe digitar el salario del trabajador</div>
+                            <div *ngIf="control.salarioTrabajador.errors.min">Debe digitar un valor minimo</div>
+                        </div>
+                    </div>
+                
+                    
+                
                 </div>
 
                 <div class="text-center">
-                    <button class="btn btn-success "(click)="add(formulario)">registrar Datos</button>
+
+                    <button class="btn btn-success" (click)="onSubmit()" [disabled]="formGroup.invalid">registrar Datos</button>
+        
+                    <button class="btn btn-secondary" type="reset">Cancel</button>
+                
                 </div>
+     
             
             </form>
         </div>
     </div>
+    
 </div>
