--- a/Salud/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Salud/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -37,3 +37,11 @@ h1.example-app-name {
 mat-sidenav{
   width: 15%;
 }
+
+.example-icon {
+  padding: 0 14px;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
