--- a/Salud/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Salud/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,11 +1,32 @@
 <header>
   
   <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun" >
+
     <mat-toolbar color="primary" class="example-toolbar" >
       <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
       <h1 class="example-app-name">Menu Copago</h1>
+                
+      <span class="example-spacer"></span>
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+          <mat-icon>dialpad</mat-icon>
+          <span>Redial</span>
+        </button>
+        <button mat-menu-item disabled>
+          <mat-icon>voicemail</mat-icon>
+          <span>Check voice mail</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon>notifications_off</mat-icon>
+          <span>Disable alerts</span>
+        </button>
+      </mat-menu>
+
     </mat-toolbar>
-  
+
     <mat-sidenav-container class="example-sidenav-container"
                            [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
       <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
@@ -13,8 +34,13 @@
         <mat-nav-list>
           <a mat-list-item [routerLink]="nav.route" *ngFor="let nav of fillerNav"> <mat-icon>{{nav.icon}}</mat-icon> {{nav.name}} </a>
         </mat-nav-list>
+
+  
+
       </mat-sidenav>
   
+   
+
       <mat-sidenav-content>
             <div class="container">
               
